syntax = "proto3";

package hello;

message HelloByName {
  string name = 1;
}

message HelloResult {
  string result = 1;
}

service HelloService {
  rpc Greet (HelloByName) returns (HelloResult) {}
}
